# bcolz-zipline

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_conda.yml  build_wheels.yml  unit_tests.yml
bcolz/: __init__.py  arrayprint.py  carray_ext.pyx  ctable.py  py2help.py  py2help_tests.py  toplevel.py  utils.py
bcolz/tests/: common.py  test_carray.py  test_ctable.py  test_ndcarray.py  test_queries.py
bench/: ctable-query.py  large_carray.py
conda.recipe/: build_.sh  conda_build_config.yaml  meta.yaml
docs/: tutorial_ctable.ipynb
